CHANGES
=======
1.3.0
-----

Use app.srcdir as jinja_base. 

This affects people that include files from jinja context and use separate
source and build directories. They should change:

```
.. jinja:: 
   :file: source/test.rst
```

to

```
.. jinja:: 
   :file: test.rst
```


1.2.1
-----
untight the dependency on jinja2 from ^2.11 to >=2.11

1.2.0
-----
* switch test to pytest
* Use jinja_base for debug printing template files
* Add Environment customization for kwargs, filters, tests, globals, and policies
* Refactor debug printing and fix urllib import
* Use debug in tests - currently breaks on 3.7+
* Add CI environments for 3.6, 3.7, 3.8, 3.9, and 3.10
* Add requirements to requirements.txt and setup.py
* Add MIT license file
* README.rst: add debug option
* README.rst: fix formatting

1.1.0
-----

* update changelog
* Don't let header\_char modify the default config in-place
* Allow parallel builds

1.0.0
-----

* update changelog
* add github url in home page
* Allow not passing a context (i.e., empty dict)
* Support \`.. include::\` in template

0.3.0
-----

* Update jinja.py
* Update jinja.py
* Update jinja.py
* Extended jinja.py to make it more useful

0.2.1
-----

* fix readme

0.2.0
-----

* Allow jinja directive to use an external jinja template
* fix flake8
* add travisyml
* update readme
* remove changelog from git, as it is autogenerated
* update README
* fix issue with pip install -e 

0.1.1
-----

* Fix issue with overwritting content of rst file

0.1.0
-----

* initial commit